erDiagram
%% ============================================================
%%  Wofuf 数据库 E-R 图
%%  架构：数据库-per-service（每个微服务独立数据库）
%% ============================================================

%% -------------------- users_db --------------------

    users {
        string id PK "用户ID (UUID)"
        string email UK "用户邮箱"
        string username UK "用户名"
        string password "BCrypt加密密码"
        boolean is_email_verified "邮箱是否已验证"
        boolean is_admin_user "是否为管理员"
        string access_token "JWT访问令牌"
        string refresh_token "JWT刷新令牌"
        boolean is_deleted "软删除标记"
        datetime last_login "最后登录时间"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

%% -------------------- players_db --------------------

    players {
        string player_uuid PK "玩家UUID"
        string player_name UK "玩家名称"
        bigint first_login "首次登录时间戳"
        bigint last_login "最后登录时间戳"
        bigint total_playtime_seconds "总游戏时长(秒)"
        bigint update_time "数据更新时间戳"
        text statistics_json "统计数据JSON Map(String, PlayerStatistic)"
        text advancements_json "成就数据JSON Map(String, PlayerAdvancement)"
        string skin_type "皮肤类型"
        string skin_url "皮肤URL"
        string cape_url "披风URL"
    }

%% -------------------- forum_db --------------------

    members {
        string id PK "成员ID (UUID)"
        string user_id UK "关联用户ID (跨域, 无FK约束)"
        string player_id UK "关联玩家UUID (跨域, 无FK约束)"
        string nick_name "昵称"
        int reputation "声望值"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    posts {
        string id PK "帖子ID (UUID)"
        string member_id FK "发布者成员ID"
        string slug UK "URL友好标识(标题-随机数字)"
        string title "帖子标题"
        string type "类型(TEXT/LINK)"
        string category "分类(DISCUSSION/SHARE/QUESTION/ANNOUNCEMENT)"
        text text "Markdown正文(最大50000字符)"
        string link "链接URL(可选)"
        int total_num_comments "评论总数"
        int points "投票分数(upvotes - downvotes)"
        datetime date_time_posted "发布时间"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    comments {
        string id PK "评论ID (UUID)"
        string member_id FK "评论者成员ID"
        string post_id FK "所属帖子ID"
        string parent_comment_id FK "父评论ID(null=顶层评论)"
        text text "评论内容(最大20000字符)"
        int points "投票分数"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    post_votes {
        string id PK "投票ID (UUID)"
        string post_id FK "帖子ID"
        string member_id FK "投票者成员ID"
        string vote_type "投票类型(UPVOTE/DOWNVOTE)"
        datetime created_at "创建时间"
    }

    comment_votes {
        string id PK "投票ID (UUID)"
        string comment_id FK "评论ID"
        string member_id FK "投票者成员ID"
        string vote_type "投票类型(UPVOTE/DOWNVOTE)"
        datetime created_at "创建时间"
    }

%% -------------------- 论坛子域内部关系 --------------------

    members ||--o{ posts : "发布"
    members ||--o{ comments : "发布"
    posts ||--o{ comments : "包含"
    comments ||--o{ comments : "子回复(自引用)"
    posts ||--o{ post_votes : "被投票"
    comments ||--o{ comment_votes : "被投票"
    members ||--o{ post_votes : "投票"
    members ||--o{ comment_votes : "投票"

%% -------------------- 跨域关系(应用层, 非数据库外键) --------------------

    %% users_db.users  1---1  forum_db.members (通过 user_id, 应用层API校验)
    %% players_db.players  1---1  forum_db.members (通过 player_id, 应用层API校验)
